<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/his_bg">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_record"
        android:textSize="15sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/delete_yes"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="#fff"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/delete_no"
            android:padding="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="#fff"
            android:textSize="15sp"/>
    </LinearLayout>



</LinearLayout>