<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/text_size_small"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/text_size_normal_bg"
                android:background="@drawable/text_size_select_bg"/>
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/text_small"/>

        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/small"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/text_size_medium"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/text_size_normal_bg" />
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/text_medium"/>

        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/medium"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/text_size_large"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/text_size_normal_bg" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/text_large"/>

        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/large"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/text_size_extra"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/text_size_normal_bg" />
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/text_extra"/>

        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/extra_large"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/text_size_very"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/text_size_normal_bg" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/text_very"/>

        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/very_large"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>