<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popop_bg">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scrolling_speed"
                android:textSize="13sp"
                android:textColor="#fff"/>

            <SeekBar
                android:id="@+id/speed_seekbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_marginLeft="10dp"
                android:layout_width="330dp"
                android:maxHeight="3dp"
                android:minHeight="3dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:splitTrack="false"
                android:progressDrawable="@drawable/seek_bg"
                android:thumb="@drawable/seek_bar_thumb"/>
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="43dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textColor="#fff"
                android:textSize="13sp"/>

            <com.led.scroller.lite.view.TextChoseSizeLinearLayout
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/text_size_chose"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#fff"
                android:text="@string/font_color"/>

            <com.led.scroller.lite.view.CircleChoseLinearLayout
                android:id="@+id/tv_color_chose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#fff"
                android:text="@string/font_color"/>

            <com.led.scroller.lite.view.CircleChoseLinearLayout
                android:id="@+id/bg_color_chose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>